# oblichey

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml  ci.yml
crates/gday-cli/: Cargo.toml
crates/gday-cli/src/: config.rs  geometry.rs  main.rs  store.rs
crates/gday-cli/src/camera/: mod.rs  utils.rs
crates/gday-cli/src/gui/: geometry.rs  mod.rs
crates/gday-cli/src/processors/: face_processor.rs  mod.rs
crates/gday-pam-module/: Cargo.toml
crates/gday-pam-module/src/: lib.rs
crates/oblichey-cli/: Cargo.toml
crates/oblichey-cli/src/: build.rs  config.rs  geometry.rs  logging.rs  main.rs  store.rs
crates/oblichey-cli/src/camera/: mod.rs  utils.rs
crates/oblichey-cli/src/gui/: mod.rs
crates/oblichey-cli/src/models/: detector.rs  mod.rs  recognizer.rs
crates/oblichey-cli/src/models/imported/: mod.rs
crates/oblichey-cli/src/processors/: auth_processor.rs  face.rs  face_processor.rs  frame_processor.rs  mod.rs  scan_processor.rs
crates/oblichey-pam-module/: Cargo.toml
crates/oblichey-pam-module/src/: lib.rs
docs/: how_does_it_work.md
nix/: module.nix  package.nix  shell.nix
scripts/: models.sh  unzip_models.sh  zip_models.sh
src/: build.rs  camera.rs  embedding_processor.rs  frame_processor.rs  geometry.rs  gui.rs  main.rs  no_gui.rs  processor.rs  store.rs  types.rs  utils.rs
src/camera/: mod.rs  utils.rs
src/gui/: geometry.rs  mod.rs  poi.rs
src/main_loop/: gui.rs  mod.rs  no_gui.rs
src/model/: detector.onnx  mod.rs
src/models/: mod.rs
src/processors/: embedding_processor.rs  face.rs  face_processor.rs  frame_processor.rs  mod.rs
