[package]
name = "gday"
version = "0.0.1"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
burn-import = { git = "https://github.com/tracel-ai/burn", rev = "4a3fc9d4a094bc7ce4205fbc83b61da383308a43" }

[dependencies]
v4l = "0.14.0"
chrono = "0.4.38"
clap = { version = "4.4.11", features = ["derive"] }
image = { version = "0.24", default-features = false }
burn = { git = "https://github.com/tracel-ai/burn", rev = "4a3fc9d4a094bc7ce4205fbc83b61da383308a43", features = [
  "wgpu",
] }
eframe = { version = "0.20", default-features = false, features = [
  "glow",
  "default_fonts",
] }
rayon = "1.10.0"
winit = "0.27.5"
strum = "0.26.3"
strum_macros = "0.26.4"
num = "0.4.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
unwrap_used = "deny"
pedantic = "deny"
missing_errors_doc = "allow"
must_use_candidate = "allow"
nursery = "deny"
module_name_repetitions = "allow"
