[package]
name = "gday"
version = "0.0.1"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
burn-import = { git = "https://github.com/tracel-ai/burn", rev = "f7639bd35a1120fccc849dcb94fbab162df7103a" }

[dependencies]
v4l = "0.14.0"
chrono = "0.4.38"
clap = { version = "4.4.11", features = ["derive"] }
image = { version = "0.24", default-features = false }
burn = { git = "https://github.com/tracel-ai/burn", rev = "f7639bd35a1120fccc849dcb94fbab162df7103a", features = [
  "wgpu",
] }
eframe = { version = "0.20", default-features = false, features = [
  "glow",
  "default_fonts",
] }
rayon = "1.10.0"
winit = "0.27.5"
strum = "0.26.3"
strum_macros = "0.26.4"
num = "0.4.3"
bincode = "1.3.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.9.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
enum_glob_use = "deny"
unwrap_used = "deny"
missing_errors_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
cast-lossless = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
