[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
name = "gday"
edition = "2021"
version = "0.0.1"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
enum_glob_use = "deny"
unwrap_used = "deny"
missing_errors_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
cast-lossless = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
