[package]
name = "oblichey-cli"
build = "src/build.rs"
version.workspace = true
edition.workspace = true

[build-dependencies]
burn-import = { git = "https://github.com/tracel-ai/burn", rev = "f7639bd35a1120fccc849dcb94fbab162df7103a" }
merkle_hash = "3.7.0"

[dependencies]
v4l = "0.14.0"
chrono = "0.4.38"
clap = { version = "4.4.11", features = ["derive"] }
image = { version = "0.24", default-features = false }
burn = { git = "https://github.com/tracel-ai/burn", rev = "f7639bd35a1120fccc849dcb94fbab162df7103a", features = [
  "wgpu",
] }
eframe = { version = "0.28.1", default-features = false, features = [
  "glow",
  "default_fonts",
] }
rayon = "1.10.0"
winit = "0.29.15"
strum = "0.26.3"
strum_macros = "0.26.4"
num = "0.4.3"
bincode = "1.3.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.9.0"
toml = "0.8.19"
mockall = "0.13.0"
mockall_double = "0.3.1"
log = "0.4.22"
flexi_logger = "0.29.0"

[features]
rgb-webcam = []

[lints]
workspace = true
